<resources>
    <string name="app_name">My Reel</string>
    <string name="menu_sorting">Sorting order</string>
    <string name="menu_sort_top_rated">Top rated</string>
    <string name="menu_sort_most_popular">Popular</string>
    <string name="rating_label">Rating</string>
    <string name="no_network">Network connection is unavailable</string>
    <string name="user_reviews">User reviews</string>
    <string name="no_user_reviews">No reviews yet.</string>
    <string name="trailers">Trailers</string>
    <string name="no_trailers">No trailers at this time.</string>
    <string name="movie_faved">Movie has been added to your favourites.</string>
    <string name="movie_unfaved">Movie has been removed from your favourites.</string>
    <string name="view_pager_tab_popular">Popular</string>
    <string name="view_pager_tab_favourite">Favourite</string>

    <string-array name="sort_order">
        <item>Top rated</item>
        <item>Popular</item>
    </string-array>

    <string name="button_submit">Submit</string>

    <string name="detail_strip_overview">Overview</string>
    <string name="detail_strip_reviews">Reviews</string>

    <string name="login_name">Login</string>
    <string name="login_pass">Password</string>

    <string name="login_method_account">Account</string>
    <string name="login_method_fb">Facebook</string>

    <string name="login_attempt_ok">Logged in successfully.</string>
    <string name="login_attempt_cancel">Login cancelled.</string>
    <string name="login_attempt_error">Login failed, please check username and password and try again.</string>

    <string name="error_loading_data">Error loading %s data.</string>
    <string name="data_type_review">review</string>
    <string name="data_type_trailer">trailer</string>

</resources>
