<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTileTitle"
            android:paddingBottom="10dp"
            android:textSize="18sp"

            />

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            />

        <TextView
            android:id="@+id/detail_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/detail_trailers"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorTileTitle"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                />

            <LinearLayout
                android:id="@+id/details_trailers_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/details_no_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_trailers"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/details_trailers_list"
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:orientation="vertical"
                    >

                </android.support.v7.widget.RecyclerView>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_reviews_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/details_no_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no_user_reviews"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/details_reviews_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:nestedScrollingEnabled="false"
                    >

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</android.support.v4.widget.NestedScrollView>
